bible: fix line wrap for verses

--- a/src/bible/styles/main.css
+++ b/src/bible/styles/main.css
@@ -2,3 +2,7 @@
   width: 100vw;
   height: 100vh;
 }
+
+pre {
+    white-space: pre-line;
+}
